@@ -5,19 +5,11 @@ type: sandbox
 
 {{< jdkdetails "12" >}}
 
-## New Features
+The first Java release that included a *preview feature* ([JEP 12](https://openjdk.java.net/jeps/12)).
+Such features are only available if the compiler and JVM is launched with the
+`--enable-preview` option. Previews allow to get early feedback on important changes in the Java language.
 
-### JVM
-
-* Shenandoah: A Low-Pause-Time Garbage Collector (Experimental, [JEP 189](http://openjdk.java.net/jeps/189))
-
-### Language
-
-* Switch Expressions (Preview, [JEP 325](http://openjdk.java.net/jeps/325))
-
-### Library
-
-* JVM Constants API ([JEP 334](http://openjdk.java.net/jeps/334))
+{{< /jdkdetails >}}
 
 
 ## Sandbox
